# object_experiments

./: 2018-07-13-10-14-57.bag.active  2018-07-13-10-17-41.bag.active  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  current_issues.md  package.xml  signal
action/: Choreography.action  Choreography.action~
launch/: .experiment.launch.swp  experiment.launch  export.launch
launch/object_experiments/launch/: experiment.launch  kinect_with_tf.launch  ur10_startup.launch
scripts/: add_two_ints_client.py  add_two_ints_client.py~  add_two_ints_server.py  move_group_python_interface.py  move_group_python_interface.py~  rosbag_recording.py  rosbag_recording.py~
src/: knock_object.script  move_group_python_interface.py  move_group_python_interface_tutorial.py  rosbag_recording.py  ur10_startup.launch
srv/: ChoreographySrv.srv
