<?xml version="1.0"?>
<package format="2">
  <name>object_experiments</name>
  <version>0.0.1</version>
  <description>The object_experiments package contains scripts for running experiments involving the UR10. Launching the file experiment.launch will initialize communication with the UR10 and the Kinects, record a rosbag of all currently running topics, run pre-defined choreography on the UR10 that may interact with objects on the experiment surface, and automatically stop the rosbag recording.
   </description>

  <maintainer email="skim21@stanford.edu">Samantha Kim</maintainer>

  <license>MIT</license>

  <author email="skim21@stanford.edu">Samantha Kim</author>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
 
</package>
